style.css
:root {
  /* gap */
  --body-gap: 2rem;
  --main-gap: 1.5rem;

  /* header */
  --header-padding: 2rem;

  /* main */
  --main-max-width: 400px;
  --main-padding: 0 24px;

  /* fonts */
  --font-family: "Libre Franklin";
  --font-family-bold: "Libre Franklin Bold";
  --font-size: 1rem;
  --font-weight-bold: 700;
  --header-font-size: 1.75rem;

  /* Primary */
  --blue-500: hsl(223, 87%, 63%);

  /* Secondary */
  --blue-200: hsl(223, 100%, 88%);
  --red-400: hsl(354, 100%, 66%);

  /* Neutral */
  --gray-400: hsl(0, 0%, 59%);
  --blue-950: hsl(209, 33%, 12%);
}

@font-face {
  font-family: "Libre Franklin";
  src:
    local("Libre Franklin"),
    url("assets/fonts/LibreFranklin-VariableFont_wght.ttf");
  font-weight: 300;
}

@font-face {
  font-family: "Libre Franklin Bold";
  src:
    local("Libre Franklin Bold"),
    url("assets/fonts/LibreFranklin-VariableFont_wght.ttf");
  font-weight: 700;
}

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100dvh;
  gap: var(--body-gap);
  font-family: var(--font-family);
  font-size: var(--font-size);
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--main-gap);
  width: 100%;
  max-width: var(--main-max-width);
  padding: var(--main-padding);
}

header {
  padding-top: var(--header-padding);
}

h1 {
  font-size: var(--header-font-size);
  color: var(--gray-400);
}

h1 strong {
  color: var(--blue-950);
  font-weight: var(--font-weight-bold);
}
/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

.attribution {
  font-size: 0.6875rem;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

.dashboard-image {
  margin-top: 2rem;
}

